register/yaml/register-service-deploy.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: register-service-deployment
spec:
  replicas: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: register-app
    spec:
      containers:
      - name: register-app
        image: asia.gcr.io/coral-shoreline-209014/register-service:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
