register/yaml/register-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: register-service-service
spec:
  selector:
    app: register-service
  ports:
   - port: 80
     protocol: TCP
     targetPort: 8080
  type: ClusterIP
