register/yaml/register-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: register-svc
spec:
  selector:
    app: register-app
  ports:
   - port: 80
     protocol: TCP
     targetPort: 8080
  type: LoadBalancer
