register/yaml/register-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: register-service-ingress
spec:
  rules:
  - http:
      paths:
      - path: /register
        backend:
          serviceName: register-service-service
          servicePort: 8080
